--- a/notebooks/downloading/download abs.ipynb
+++ b/notebooks/downloading/download abs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "RELATIVE_PATH = \"../../data/landing/\"\n",
-    "MERGE_COLUMNS = [\"SA2_CODE_2021\"]\n",
+    "SA2_CODE_NAME = \"SA2 code\"\n",
+    "MERGE_COLUMNS = [\"SA2_MAINCODE_2016\", \"SA2_CODE_2021\", SA2_CODE_NAME, \"year\"]\n",
     "MERGE_FILE_NAME = \"merge.csv\""
    ]
   },
@@ -36,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_next_merge(new_df, final_df, join_columns):\n",
+    "def get_next_merge(new_df, final_df):\n",
     "    if (final_df.empty):\n",
     "        return new_df\n",
     "\n",
     "    # get the attributes used for the merge\n",
-    "    merge_columns = list(set(new_df.columns) & set(join_columns) & set(final_df.columns))\n",
+    "    merge_columns = list(set(new_df.columns) & set(MERGE_COLUMNS) & set(final_df.columns))\n",
     "\n",
     "    # get the columns not already in the data frame\n",
     "    new_columns = list(set(new_df.columns) - set(final_df.columns) - set(merge_columns))\n",
@@ -227,15 +228,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_merged_df(df_list, join_columns):\n",
+    "def get_merged_df(df_list):\n",
     "    # keep on aggregating\n",
     "    agg_df = df_list[0]\n",
     "    for new_df in df_list[1:]:\n",
-    "        agg_df = get_next_merge(new_df, agg_df, join_columns)\n",
+    "        agg_df = get_next_merge(new_df, agg_df)\n",
     "\n",
     "    return agg_df"
    ]
@@ -249,17 +250,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\"Note: uses the actual index name\"\"\"\n",
     "def rename_dict(df, csv_dict):\n",
+    "    # find the merge columns present in the dictionary\n",
+    "    merge_columns = list(set(df.columns) & set(MERGE_COLUMNS))\n",
+    "\n",
+    "    if (len(merge_columns) != 1):\n",
+    "        print(\"more than one merge column in dictionary\")\n",
+    "        return None\n",
+    "\n",
     "    # filter the dictionary with the old names\n",
-    "    df = df[MERGE_COLUMNS + list(csv_dict[\"rename\"].keys())]\n",
+    "    df = df[merge_columns + list(csv_dict[\"rename\"].keys())]\n",
     "\n",
     "    # get the new names\n",
-    "    df.columns = MERGE_COLUMNS + [csv_dict[\"name\"] + \": \" + new_name for new_name in  csv_dict[\"rename\"].values()]\n",
+    "    df.columns = [SA2_CODE_NAME] + [csv_dict[\"name\"] + \": \" + new_name for new_name in  csv_dict[\"rename\"].values()]\n",
     "    \n",
     "    return df"
    ]
@@ -273,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,19 +298,26 @@
     "    for code_path in code_paths:\n",
     "        code_dataframes.append(pd.read_csv(code_path))\n",
     "\n",
-    "    # keep on merging for each directory\n",
-    "    out_df = get_merged_df(code_dataframes, MERGE_COLUMNS)\n",
+    "    # merge the dictionary\n",
+    "    out_df = get_merged_df(code_dataframes)\n",
     "\n",
     "    # rename the columns\n",
     "    out_df = rename_dict(out_df, csv_dict)\n",
     "\n",
-    "    # write the csv\n",
-    "    out_df.to_csv(RELATIVE_PATH + \"ABS/\" + csv_dict[\"name\"] + \".csv\")"
+    "    # add a year if necessary\n",
+    "    if (csv_dict.get(\"add year\")):\n",
+    "        out_df[\"year\"] = int(csv_dict[\"year\"])\n",
+    "\n",
+    "        # write the csv\n",
+    "        out_df.to_csv(RELATIVE_PATH + \"ABS/\" + csv_dict[\"name\"] + \"_\" + csv_dict[\"year\"] + \".csv\")\n",
+    "    else:\n",
+    "        # write csv with year code\n",
+    "        out_df.to_csv(RELATIVE_PATH + \"ABS/\" + csv_dict[\"name\"] + \".csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +476,7 @@
        "G5                  G01                           Females  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CSV_RELATIONSHIPS = {\n",
+    "CSV_RELATIONSHIPS_2021 = {\n",
     "    \"year\": \"2021\",\n",
     "    \"code\": \"G27\",\n",
     "    \"name\": \"relationships\",\n",
@@ -505,13 +520,14 @@
     "        \"P_OthRI_Tot\": \"other related individual\",\n",
     "        \"P_GrpH_Mem_Tot\": \"group household\",\n",
     "        \"P_LonePsn_Tot\": \"lone persons\"\n",
-    "    }\n",
+    "    },\n",
+    "    \"add year\": True\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -520,244 +536,52 @@
      "text": [
       "lost 0 out of 524 records\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SA2_CODE_2021</th>\n",
-       "      <th>relationships: married</th>\n",
-       "      <th>relationships: defacto</th>\n",
-       "      <th>relationships: lone parents</th>\n",
-       "      <th>relationships: child under 15</th>\n",
-       "      <th>relationships: dependent student</th>\n",
-       "      <th>relationships: non dependent child</th>\n",
-       "      <th>relationships: other related individual</th>\n",
-       "      <th>relationships: group household</th>\n",
-       "      <th>relationships: lone persons</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>201011001</td>\n",
-       "      <td>6056</td>\n",
-       "      <td>1328</td>\n",
-       "      <td>772</td>\n",
-       "      <td>3884</td>\n",
-       "      <td>974</td>\n",
-       "      <td>854</td>\n",
-       "      <td>252</td>\n",
-       "      <td>447</td>\n",
-       "      <td>1096</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>201011002</td>\n",
-       "      <td>4129</td>\n",
-       "      <td>906</td>\n",
-       "      <td>471</td>\n",
-       "      <td>1669</td>\n",
-       "      <td>604</td>\n",
-       "      <td>464</td>\n",
-       "      <td>132</td>\n",
-       "      <td>538</td>\n",
-       "      <td>1776</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>201011005</td>\n",
-       "      <td>2935</td>\n",
-       "      <td>514</td>\n",
-       "      <td>248</td>\n",
-       "      <td>1427</td>\n",
-       "      <td>395</td>\n",
-       "      <td>367</td>\n",
-       "      <td>74</td>\n",
-       "      <td>134</td>\n",
-       "      <td>484</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>201011006</td>\n",
-       "      <td>3302</td>\n",
-       "      <td>1238</td>\n",
-       "      <td>584</td>\n",
-       "      <td>2150</td>\n",
-       "      <td>411</td>\n",
-       "      <td>599</td>\n",
-       "      <td>243</td>\n",
-       "      <td>373</td>\n",
-       "      <td>826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>201011007</td>\n",
-       "      <td>1836</td>\n",
-       "      <td>319</td>\n",
-       "      <td>105</td>\n",
-       "      <td>861</td>\n",
-       "      <td>261</td>\n",
-       "      <td>323</td>\n",
-       "      <td>64</td>\n",
-       "      <td>41</td>\n",
-       "      <td>202</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>201011008</td>\n",
-       "      <td>4179</td>\n",
-       "      <td>1589</td>\n",
-       "      <td>959</td>\n",
-       "      <td>2576</td>\n",
-       "      <td>526</td>\n",
-       "      <td>937</td>\n",
-       "      <td>348</td>\n",
-       "      <td>488</td>\n",
-       "      <td>2080</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>201011481</td>\n",
-       "      <td>2693</td>\n",
-       "      <td>971</td>\n",
-       "      <td>516</td>\n",
-       "      <td>1413</td>\n",
-       "      <td>260</td>\n",
-       "      <td>555</td>\n",
-       "      <td>166</td>\n",
-       "      <td>455</td>\n",
-       "      <td>1511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>201011482</td>\n",
-       "      <td>5273</td>\n",
-       "      <td>1402</td>\n",
-       "      <td>546</td>\n",
-       "      <td>2646</td>\n",
-       "      <td>684</td>\n",
-       "      <td>720</td>\n",
-       "      <td>192</td>\n",
-       "      <td>407</td>\n",
-       "      <td>1722</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>201011483</td>\n",
-       "      <td>3486</td>\n",
-       "      <td>1261</td>\n",
-       "      <td>614</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>505</td>\n",
-       "      <td>615</td>\n",
-       "      <td>221</td>\n",
-       "      <td>654</td>\n",
-       "      <td>1552</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>201011484</td>\n",
-       "      <td>3066</td>\n",
-       "      <td>1376</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1969</td>\n",
-       "      <td>337</td>\n",
-       "      <td>823</td>\n",
-       "      <td>260</td>\n",
-       "      <td>547</td>\n",
-       "      <td>2297</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   SA2_CODE_2021  relationships: married  relationships: defacto  \\\n",
-       "0      201011001                    6056                    1328   \n",
-       "1      201011002                    4129                     906   \n",
-       "2      201011005                    2935                     514   \n",
-       "3      201011006                    3302                    1238   \n",
-       "4      201011007                    1836                     319   \n",
-       "5      201011008                    4179                    1589   \n",
-       "6      201011481                    2693                     971   \n",
-       "7      201011482                    5273                    1402   \n",
-       "8      201011483                    3486                    1261   \n",
-       "9      201011484                    3066                    1376   \n",
-       "\n",
-       "   relationships: lone parents  relationships: child under 15  \\\n",
-       "0                          772                           3884   \n",
-       "1                          471                           1669   \n",
-       "2                          248                           1427   \n",
-       "3                          584                           2150   \n",
-       "4                          105                            861   \n",
-       "5                          959                           2576   \n",
-       "6                          516                           1413   \n",
-       "7                          546                           2646   \n",
-       "8                          614                           2006   \n",
-       "9                          970                           1969   \n",
-       "\n",
-       "   relationships: dependent student  relationships: non dependent child  \\\n",
-       "0                               974                                 854   \n",
-       "1                               604                                 464   \n",
-       "2                               395                                 367   \n",
-       "3                               411                                 599   \n",
-       "4                               261                                 323   \n",
-       "5                               526                                 937   \n",
-       "6                               260                                 555   \n",
-       "7                               684                                 720   \n",
-       "8                               505                                 615   \n",
-       "9                               337                                 823   \n",
-       "\n",
-       "   relationships: other related individual  relationships: group household  \\\n",
-       "0                                      252                             447   \n",
-       "1                                      132                             538   \n",
-       "2                                       74                             134   \n",
-       "3                                      243                             373   \n",
-       "4                                       64                              41   \n",
-       "5                                      348                             488   \n",
-       "6                                      166                             455   \n",
-       "7                                      192                             407   \n",
-       "8                                      221                             654   \n",
-       "9                                      260                             547   \n",
-       "\n",
-       "   relationships: lone persons  \n",
-       "0                         1096  \n",
-       "1                         1776  \n",
-       "2                          484  \n",
-       "3                          826  \n",
-       "4                          202  \n",
-       "5                         2080  \n",
-       "6                         1511  \n",
-       "7                         1722  \n",
-       "8                         1552  \n",
-       "9                         2297  "
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "write_csv(CSV_RELATIONSHIPS)"
+    "write_csv(CSV_RELATIONSHIPS_2021)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CSV_RELATIONSHIPS_2016 = {\n",
+    "    \"year\": \"2016\",\n",
+    "    \"code\": \"G23\",\n",
+    "    \"name\": \"relationships\",\n",
+    "    \"rename\": {\n",
+    "        \"P_H_or_W_in_RM_Tot\": \"married\",\n",
+    "        \"P_Ptn_in_DFM_Tot\": \"defacto\",\n",
+    "        \"P_LonePnt_Tot\": \"lone parents\",\n",
+    "        \"P_CU15_Tot\": \"child under 15\",\n",
+    "        \"P_DpStu_Tot\": \"dependent student\",\n",
+    "        \"P_NDpChl_Tot\": \"non dependent child\",\n",
+    "        \"P_OthRI_Tot\": \"other related individual\",\n",
+    "        \"P_GrpH_Mem_Tot\": \"group household\",\n",
+    "        \"P_LonePsn_Tot\": \"lone persons\"\n",
+    "    },\n",
+    "    \"add year\": True\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lost 0 out of 464 records\n"
+     ]
+    }
+   ],
+   "source": [
+    "write_csv(CSV_RELATIONSHIPS_2016)"
    ]
   },
   {
@@ -769,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,6 +772,13 @@
    "source": [
     "## Merge"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -969,7 +800,8 @@
     "# get all the csvs\n",
     "merge_path = RELATIVE_PATH + \"ABS/\"\n",
     "merging_files = [merge_path + file for file in os.listdir(merge_path) \n",
-    "                 if (file != MERGE_FILE_NAME) and (file.endswith(\".csv\"))]\n",
+    "                 if (file != MERGE_FILE_NAME) and (file.endswith(\".csv\"))\n",
+    "                 and (not file.endswith(\"_2016.csv\") and (not file.endswith(\"_2021.csv\")))]\n",
     "\n",
     "# get the list of dataframes\n",
     "merging_frames = []\n",
