--- a/notebooks/preprocess/preprocess external.ipynb
+++ b/notebooks/preprocess/preprocess external.ipynb
@@ -1519,6 +1519,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 816,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MultiIndex([(  '85 and over', 'no.'),\n",
+       "            ('Total persons', 'no.')],\n",
+       "           )"
+      ]
+     },
+     "execution_count": 816,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the CSV file\n",
+    "vic_population_df = pd.read_csv(vic_population_filepath, header=[0, 1])\n",
+    "vic_population_df.columns[28:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 817,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{11: 'age: 0-4',\n",
+       " 12: 'age: 5-9',\n",
+       " 13: 'age: 10-14',\n",
+       " 14: 'age: 15-19',\n",
+       " 15: 'age: 20-24',\n",
+       " 16: 'age: 25-29',\n",
+       " 17: 'age: 30-34',\n",
+       " 18: 'age: 35-39',\n",
+       " 19: 'age: 40-44',\n",
+       " 20: 'age: 45-49',\n",
+       " 21: 'age: 50-54',\n",
+       " 22: 'age: 55-59',\n",
+       " 23: 'age: 60-64',\n",
+       " 24: 'age: 65-69',\n",
+       " 25: 'age: 70-74',\n",
+       " 26: 'age: 75-79',\n",
+       " 27: 'age: 80-84'}"
+      ]
+     },
+     "execution_count": 817,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age_start = 11\n",
+    "{age_start + i: \"age: \" + str(i*5) + \"-\" + str(i*5 + 4) for i in range(17)}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 778,
    "metadata": {},
    "outputs": [
@@ -1906,11 +1967,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "### Population future"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
