--- a/notebooks/2. raw/1.2. rename external and housing.ipynb
+++ b/notebooks/2. raw/1.2. rename external and housing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "b41d1857",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "d5b1283f",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
     "RELATIVE_PATH_OUT = \"../../data/2. raw/1. renamed/\"\n",
     "\n",
     "# get the directory names\n",
-    "directory_names = [\"\", \"housing\", \"population\", \"economic\", \"economic_by_region\", \"school\"]\n",
+    "directory_names = [\"housing\", \"population\", \"economic\", \"economic_by_region\", \"school\"]\n",
     "\n",
     "# create each new directory\n",
     "for directory_name in directory_names:\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "e465a024",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "218ca43d",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "3d8bd1e4",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "1f9abafd",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "16c13462",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "130706a7",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "id": "147d01db",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "20c046b4",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 36,
    "id": "88ed033b",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 37,
    "id": "ece53642",
    "metadata": {},
    "outputs": [
@@ -420,7 +420,7 @@
        "4  1959                               5.0      5"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 38,
    "id": "2ee52bff",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 39,
    "id": "8610a989",
    "metadata": {},
    "outputs": [],
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 40,
    "id": "b4f7a156",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 41,
    "id": "ba14edf1",
    "metadata": {},
    "outputs": [],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 42,
    "id": "9f9d0e8c",
    "metadata": {},
    "outputs": [],
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 43,
    "id": "543d9803",
    "metadata": {},
    "outputs": [],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 44,
    "id": "f591ff95",
    "metadata": {},
    "outputs": [],
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 45,
    "id": "36a6b5e8",
    "metadata": {},
    "outputs": [],
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 46,
    "id": "48c627e4",
    "metadata": {},
    "outputs": [],
@@ -692,10 +692,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 47,
    "id": "904845e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_17166/1632600668.py:10: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  column_dataframe = column_dataframe.applymap(lambda x: None if (not x) or (na in str(x)) else x)\n"
+     ]
+    }
+   ],
    "source": [
     "# get the dataframe\n",
     "df = get_csv(RELATIVE_PATH_IN + \"economic_by_region/income_by_geography.xlsx\", {\"sheet\": \"Table 1.4\"}, read_excel_dict_economic_by_region)\n",
@@ -724,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 48,
    "id": "d31a8632",
    "metadata": {},
    "outputs": [],
@@ -739,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 49,
    "id": "da69535d",
    "metadata": {},
    "outputs": [],
@@ -757,27 +766,11 @@
     "# write to csv\n",
     "df.to_csv(RELATIVE_PATH_OUT + \"economic_by_region/income_distribution_by_geography.csv\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a624196e",
-   "metadata": {},
-   "source": [
-    "## Schools"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "192dcb06",
-   "metadata": {},
-   "source": [
-    "- Not sure what to do here"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -791,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
